--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ a {
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
   width: 1200px;
   /* outline: 2px solid tomato; */
 }
@@ -102,6 +104,7 @@ a {
 .contacts .item:not(:last-child) {
   margin-right: 50px;
 }
+
 .contact-nav .link {
   display: block;
   padding-top: 32px;
