--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,9 @@ body {
 .list,
 .work-list,
 .team-list,
-.benefits {
+.benefits,
+.logo-list,
+.clients-list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -36,7 +38,7 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   width: 1200px;
-  /* outline: 2px solid tomato; */
+  outline: 2px solid tomato;
 }
 
 /* Page Header */
