--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@
   display: flex;
 }
 
-.clients-list .item {
+.client-img {
   display: flex;
   width: 175px;
   border: 1px solid #afb1b8;
@@ -160,7 +160,7 @@
   border-radius: 4px;
 }
 
-.clients-list .item:not(:last-child) {
+.clients-list .client-img:not(:last-child) {
   margin-right: 30px;
 }
 
