--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,10 @@ body {
 .team-list,
 .benefits,
 .logo-list,
-.clients-list {
+.clients-list,
+.info-list,
+.contact-list,
+.logos-list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -65,7 +68,7 @@ a {
   font-size: 26px;
   line-height: 1.19;
 }
-.main-logo:focus {
+.main-logo:focus .main-logo:hover {
   color: var(--accent);
 }
 
@@ -119,7 +122,8 @@ a {
   letter-spacing: 0.02em;
 }
 .nav-image {
-  display: flex;
+  display: inline;
+  margin-right: 10px;
 }
 
 .item {
@@ -146,28 +150,45 @@ a {
 }
 
 /* Footer  */
+footer {
+  background-color: #2f303a;
+}
+
+.main-footer {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  width: 1200px;
+  padding-top: 58px;
+  padding-bottom: 28px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .footer-logo {
   color: var(--accent);
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 22px;
+  line-height: 1.18;
 }
 
 .footer-logo-two {
   color: var(--white-text-color);
   font-family: Raleway, sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-}
-.footer-logo:focus {
-  color: var(--accent);
+  font-size: 22px;
+  line-height: 1.18;
 }
 
-footer {
-  background-color: #2f303a;
+.info-list {
+  display: inline-block;
+}
+.address {
+  margin-top: 10px;
 }
 
-.list .address a {
+.info-list .address a {
   color: var(--white-text-color);
   font-style: normal;
   font-size: 14px;
@@ -181,7 +202,26 @@ footer {
   line-height: 1.7;
 }
 
+.contact-list .contact:not(:last-child) {
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
+
+.secondary-footer {
+  align-items: baseline;
+}
+
+.secondary-footer .logos-list {
+  display: flex;
+  justify-content: center;
+}
+
+.logos-list .logo-img:not(:last-child) {
+  margin-right: 10px;
+}
+
 .footer-text {
+  margin-bottom: 21px;
   color: var(--white-text-color);
   font-weight: 700;
   font-size: 14px;
