--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@
 /* Hero */
 .hero {
   text-align: center;
-  margin-bottom: 94px;
   background-color: rgba(47, 48, 58, 0.8);
 }
 .hero-title {
@@ -65,6 +64,23 @@
   display: flex;
 }
 
+/* .bnft-item {
+  width: calc((100% - 90px) / 4);
+} */
+
+.item-bnft {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  padding: 25px 102px;
+}
+
+.item-bnft:hover,
+.item-bnft:focus {
+  background-color: var(--accent);
+}
+
 .benefits .title {
   margin-top: 30px;
   margin-bottom: 10px;
@@ -76,8 +92,14 @@
   text-transform: uppercase;
 }
 
-.benefits .list:not(:last-child) {
+.benefits .bnft-item:not(:last-child) {
   margin-right: 30px;
+}
+
+.benefit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .text {
   margin-top: 0;
@@ -91,6 +113,7 @@
 /* Section Work */
 .work-list {
   display: flex;
+  background-color: goldenrod;
 }
 
 .work-list .list:not(:last-child) {
@@ -98,6 +121,9 @@
 }
 
 .work-list .title {
+  margin-top: 27px;
+  margin-bottom: 27px;
+
   color: var(--white-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -130,6 +156,7 @@
 }
 
 .team-list .role {
+  margin-top: 0;
   margin-bottom: 16px;
 
   color: var(--secondary-text-color);
@@ -154,10 +181,16 @@
 
 .client-img {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 175px;
+  height: 90px;
   border: 1px solid #afb1b8;
-  box-sizing: border-box;
   border-radius: 4px;
+}
+
+.client-img:hover .client-img:focus {
+  color: var(--accent);
 }
 
 .clients-list .client-img:not(:last-child) {
