--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -16,8 +16,38 @@
 /* header background rgba(0, 0, 0, 0.12) */
 
 /* Section */
+.portfolio-list {
+  display: flex;
+  margin-top: 93px;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.portfolio-list .unit:not(:last-child) {
+  margin-right: 8px;
+}
+
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.works-list .examples:nth-child(3n) {
+  margin-right: 0;
+}
+
+.works-list .examples {
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: calc((100% - 60px) / 3);
+  border: 1px solid #eeeeee;
+  border-radius: 5px;
+}
 
 .section-title {
+  margin-top: 0;
+  margin-bottom: 4px;
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -25,6 +55,7 @@
   letter-spacing: 0.06em;
 }
 .text {
+  margin: 0;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.9;
@@ -36,6 +67,10 @@
   line-height: 1.9;
   display: flex;
   align-items: center;
+}
+
+.content {
+  padding: 20px 24px;
 }
 
 /* Button */
@@ -57,14 +92,22 @@
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
+  border-radius: 4px;
+  border: none;
 }
 
 .button-primary:hover,
 .button-primary:focus {
   background-color: var(--accent);
+  color: var(--white-text-color);
 }
 
 .button-secondary {
+  border-radius: 4px;
+  padding: 10px 32px;
+  display: inline-block;
+  min-width: 200px;
+
   color: var(--white-text-color);
   background-color: var(--accent);
   font-weight: 900;
